// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index slot 1`] = `<van-image-preview value="true"></van-image-preview>`;

exports[`lazy-load prop 1`] = `
<div class="x-image-preview" name="van-fade">
  <div class="x-image-preview__index">1/3</div>
  <div class="x-swipe">
    <div class="x-swipe__track" style="width: 0px; transition-duration: 0ms; transform: translateX(0px);">
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img class="x-image-preview__image" style="transition: .3s all;"></div>
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img class="x-image-preview__image"></div>
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img class="x-image-preview__image"></div>
    </div>
  </div>
</div>
`;

exports[`render image 1`] = `
<div class="x-image-preview" name="van-fade">
  <div class="x-image-preview__index">1/3</div>
  <div class="x-swipe">
    <div class="x-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="x-image-preview__image" style="transition: .3s all;"></div>
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="x-image-preview__image"></div>
      <div class="x-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="x-image-preview__image"></div>
    </div>
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="x-image-preview" name="van-fade">
  <div class="x-image-preview__index">1/3</div>
  <div class="x-swipe">
    <div class="x-swipe__track" style="transition-duration: 500ms; width: 0px; transform: translateX(0px);">
      <div class="x-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="x-image-preview__image" style="transform: scale3d(2, 2, 1) translate(0px, NaNpx);"></div>
      <div class="x-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="x-image-preview__image"></div>
      <div class="x-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="x-image-preview__image"></div>
    </div>
  </div>
</div>
`;
